--- a/app/src/templates/books/book-create.html
+++ b/app/src/templates/books/book-create.html
@@ -1,5 +1,10 @@
+{% extends "base.html" %}
+{% load crispy_forms_tags %}
+
+{% block content %}
 <form action="." method="POST">
     {% csrf_token %}
-    {{ form.as_p }}
-<button type="submit">Add</button>
+    {{ form|crispy }}
+    <button type="submit" class="btn btn-success">Add</button>
 </form>
+{% endblock content %}
