--- a/app/src/templates/books/book-update.html
+++ b/app/src/templates/books/book-update.html
@@ -1,5 +1,11 @@
+{% extends "base.html" %}
+{% load crispy_forms_tags %}
+
+{% block content %}
 <form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-<button type="submit">Update</button>
+   {% csrf_token %}
+   {{ form|crispy }}
+   <button type="submit" class="btn btn-success">Update</button>
 </form>
+{% endblock content %}
+
