--- a/app/src/templates/books/book-confirm-delete.html
+++ b/app/src/templates/books/book-confirm-delete.html
@@ -6,6 +6,6 @@
     The following book will be deleted. Are you sure?
     <p>{{ object.title }} ({{ object.author }})</p>
     <input type="submit" value="Confirm" name="confirm_delete" class="btn btn-danger"/>
-    <input type="submit" value="Cancel" name="cancel" class="btn"/>
+    <a class="btn" href="{% url 'books:book-list' %}">Cancel</a>
 </form>
 {% endblock content %}
