Refactor Book views templates

--- a/app/src/templates/base.html
+++ b/app/src/templates/base.html
@@ -8,8 +8,26 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
    </head>
    <body>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+         <a class="navbar-brand">Book library</a>
+         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+         <span class="navbar-toggler-icon"></span>
+         </button>
+         <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+               <li class="nav-item active">
+                  <a class="nav-link" href="{% url  'books:book-list'%}">List</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="{% url  'books:book-create'%}">Add</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="{% url  'books:book-import'%}">Import</a>
+               </li>
+            </ul>
+         </div>
+      </nav>
       {% block content %}
       {% endblock content %}
    </body>
 </html>
-
