--- a/app/src/templates/books/book-import.html
+++ b/app/src/templates/books/book-import.html
@@ -1,37 +1,51 @@
 {% extends "base.html" %}
-
+{% load crispy_forms_tags %}
 {% block content %}
 <h1>Import books via Google Books API</h1>
 <form method="GET">
-        {{ form.as_p }}
-        <button type="submit" class="btn" value="submitted" name="searchButton">Search</button>
+   <div class="row">
+      <div class="col-2">
+         {{ form.query|as_crispy_field }}
+      </div>
+      <div class="col-2 my-auto">
+         <button type="submit" class="btn btn-success" value="submitted" name="searchButton">Search</button>
+      </div>
+   </div>
 </form>
 {% if books %}
 <form method="POST">
    {% csrf_token %}
-{% for book in books %}
-   <input type="checkbox" value="{{ book.volume_id }}" name="volume_ids">
-<div class="card mb-3" style="max-width: 540px;">
-   <div class="row g-0">
-      <div class="col-md-4 my-auto">
-         <img src="{{ book.cover_url }}" class="img-fluid rounded-start" alt="No cover">
-      </div>
-      <div class="col-md-8">
-         <div class="card-body">
-            <h5 class="card-title">{{ book.title}}</h5>
-            <h6 class="text-muted">{{ book.author }}</h6>
-            <ul class="list-group list-group-flush">
-               <li class="list-group-item"><small>Release date: {{ book.publication_date }}</small></li>
-               <li class="list-group-item"><small>Pages: {{ book.page_count }}</small></li>
-               <li class="list-group-item"><small>Language: {{ book.get_language_display }}</small></li>
-               <li class="list-group-item"><small>ISBN: {{ book.isbn }}</small></li>
-            </ul>
-         </div>
-      </div>
-   </div>
-</div>
-{% endfor %}
    <button type="submit" class="btn btn-success">Add selected</button>
+   <table class="table table-hover">
+      <thead>
+         <tr>
+            <th scope="col">Cover</th>
+            <th scope="col">Title</th>
+            <th scope="col">Author</th>
+            <th scope="col">Publication date</th>
+            <th scope="col">Page count</th>
+            <th scope="col">Language</th>
+            <th scope="col">ISBN</th>
+            <th scope="col"></th>
+         </tr>
+      </thead>
+      <tbody>
+         {% for book in books %}
+         <tr>
+            <td><img src="{{ book.cover_url }}" class="img-fluid rounded-start" alt="No cover"></td>
+            <td>{{ book.title }}</td>
+            <td>{{ book.author }}</td>
+            <td>{{ book.publication_date }}</td>
+            <td>{{ book.page_count }}</td>
+            <td>{{ book.get_language_display }}</td>
+            <td>{{ book.isbn }}</td>
+            <td>
+               <input type="checkbox" value="{{ book.volume_id }}" name="volume_ids">
+            </td>
+         </tr>
+         {% endfor %}
+      </tbody>
+   </table>
 </form>
 {% else %}
 <p>No books found.</p>
