--- a/app/src/templates/books/book-list.html
+++ b/app/src/templates/books/book-list.html
@@ -1,35 +1,71 @@
 {% extends "base.html" %}
-
+{% load crispy_forms_tags %}
 {% block content %}
 <h1>Book List</h1>
-<form method="GET">
-        {{ filter.form.as_p }}
-        <button type="submit" class="btn">Search</button>
-</form>
-{% if filter.qs %}
-{% for book in filter.qs %}
-<div class="card mb-3" style="max-width: 540px;">
-   <div class="row g-0">
-      <div class="col-md-4 my-auto">
-         <img src="{{ book.cover_url }}" class="img-fluid rounded-start" alt="No cover">
-      </div>
-      <div class="col-md-8">
-         <div class="card-body">
-            <h5 class="card-title">{{ book.title}}</h5>
-            <h6 class="text-muted">{{ book.author }}</h6>
-            <ul class="list-group list-group-flush">
-               <li class="list-group-item"><small>Release date: {{ book.publication_date }}</small></li>
-               <li class="list-group-item"><small>Pages: {{ book.page_count }}</small></li>
-               <li class="list-group-item"><small>Language: {{ book.get_language_display }}</small></li>
-               <li class="list-group-item"><small>ISBN: {{ book.isbn }}</small></li>
-            </ul>
+<div class="form-row">
+   <form method="GET">
+      <div class="row">
+         <div class="col-2">
+            {{ filter.form.title|as_crispy_field }}
+         </div>
+         <div class="col-2">
+            {{ filter.form.author|as_crispy_field }}
+         </div>
+         <div class="col-2">
+            {{ filter.form.language|as_crispy_field }}
+         </div>
+         <div class="col-2">
+            {{ filter.form.publication_date__gt|as_crispy_field }}
+         </div>
+         <div class="col-2">
+            {{ filter.form.publication_date__lt|as_crispy_field }}
+         </div>
+         <div class="col-2 my-auto">
+            <button type="submit" class="btn btn-success">Search</button>
          </div>
       </div>
-   </div>
+   </form>
 </div>
-{% endfor %}
+{% if filter.qs %}
+<table class="table table-hover">
+   <thead>
+      <tr>
+         <th scope="col">Cover</th>
+         <th scope="col">Title</th>
+         <th scope="col">Author</th>
+         <th scope="col">Publication date</th>
+         <th scope="col">Page count</th>
+         <th scope="col">Language</th>
+         <th scope="col">ISBN</th>
+         <th scope="col"></th>
+         <th scope="col"></th>
+      </tr>
+   </thead>
+   <tbody>
+      {% for book in filter.qs %}
+      <tr>
+         <td><img src="{{ book.cover_url }}" class="img-fluid rounded-start" alt="No cover"></td>
+         <td>{{ book.title }}</td>
+         <td>{{ book.author }}</td>
+         <td>{{ book.publication_date }}</td>
+         <td>{{ book.page_count }}</td>
+         <td>{{ book.get_language_display }}</td>
+         <td>{{ book.isbn }}</td>
+         <td>
+            <button type="button" class="btn btn-default">
+            <a href="{% url 'books:book-delete' pk=book.id %}" class="link-danger text-decoration-none">Delete</a>
+            </button>
+         </td>
+         <td>
+            <button type="button" class="btn btn-default">
+            <a href="{% url 'books:book-update' pk=book.id %}" class="text-decoration-none">Update</a>
+            </button>
+         </td>
+      </tr>
+      {% endfor %}
+   </tbody>
+</table>
 {% else %}
 <p>No books found.</p>
 {% endif %}
 {% endblock content %}
-
